--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
 body {
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+::ng-deep *,
+::ng-deep body {
+  animation-duration: 0 !important;
 }
