--- a/src/app/components/signature-loader/signature-loader.component.html
+++ b/src/app/components/signature-loader/signature-loader.component.html
@@ -1,4 +1,4 @@
-<div class="signature-loader">
+<div class="signature-loader" (click)="redirectToLandingPage()">
   <svg
     #signatureContainer
     id="eQxTczGP8n11"
