--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -55,6 +55,14 @@
   top: 0px;
 }
 
+.main-container {
+  width: 100vw;
+  max-width: 912px;
+  margin: 0 auto;
+  height: 100vh;
+  padding-top: 100px;
+}
+
 @keyframes animated_div {
   0% {
     transform: rotate(0deg);
