--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
+@font-face {
+  font-family: "DkCrayonCrumble";
+  src: local("DkCrayonCrumble"), url(./assets/fonts/DkCrayonCrumble.ttf) format("truetype");
+}
+
 *,
 body {
   margin: 0;
