--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,3 +1,41 @@
-<div class="">
-  <div class=""></div>
+<div class="about-me container">
+  <div class="navigations">
+    <ul>
+      <li>Know Me</li>
+      <li>Tech I'm Interested In</li>
+      <li>Where I've Worked</li>
+      <li>Academics</li>
+      <li>Courses & Achievements</li>
+      <li>Social</li>
+    </ul>
+  </div>
+  <div class="main">
+    <div class="section">
+      <div class="section--title">Know Me</div>
+      <div class="section--body">
+        <h2>Hello!</h2>
+        <p>
+          I am Souvik Nandi, Engineer by profession and science enthusiast by passion.
+          <br />
+          I was born in Kolkata (West Bengal, India) and currently travelling across the country to explore new
+          dimensions of life.
+          <br /><br />
+          Well, I did spent around first 18 years of my life, following a life of a typical Indian student until I went
+          to college to live an adventurous life, not missing a fun for a single second, meeting new people, exploring
+          new places. Ohhh! I miss that life. Well that does not mean I have stopped exploring, I am becoming more
+          stronger (only mentally, have already started to skip gym) and learning something new everyday.
+          <br /><br />
+          Well in a nutshell thats me, smiling through the tough phases and focused when things don't work out, I
+          believe thats the beauty of life we eventualy reach our destination but the road is always unplanned.
+        </p>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="section--title">Tech I'm Interested In</div>
+      <div class="section--body">
+        <span class="content"></span>
+      </div>
+    </div>
+  </div>
 </div>
